--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 <body>
     <div>
         <div id="bandeau">
-
+            LIVRAISON GRATUITE sur les commandes de plus de 35 €.
         </div>
         <div id="Menu_Crocs">
             <div id="logo">
-                <img src="style/img/logo.png" alt="">
             </div>
             <div id="promo">
                 Promo
