--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <div>
+        <div id="savoir_plus">
+            
+            Acheter maintenant. Payer avec  &nbsp <strong> Klarna</strong>. En savoir plus
+        </div>
         <div id="bandeau">
             LIVRAISON GRATUITE sur les commandes de plus de 35 €.
         </div>
@@ -20,8 +24,14 @@
             <div id="promo"  class="name">
                 <a href="pages/promo.html">Promo</a>
             </div>
-            <div id="femme" class="name">
+            <div class="titre" class="name">
                 Femme
+            </div>
+            <div class="titre" class="name">
+                Homme
+            </div>
+            <div class="titre" class="name">
+                Enfant
             </div>
             <div id="like">
             </div>
@@ -33,6 +43,20 @@
             <img src="style/img/accueil.webp" alt="" class="img_accueil">
             <img src="style/img/accueil2.webp" alt="" class="img_accueil">
 
+        </div>
+        <div id="second_bar">
+            <div class="second_titre">
+                Femme
+            </div>
+            <div class="second_titre">
+                Homme
+            </div>
+            <div class="second_titre">
+                Enfant
+            </div>
+            <div class="second_titre">
+                Promo
+            </div>
         </div>
     
     </div>
