--- a/pages/promo.html
+++ b/pages/promo.html
@@ -11,7 +11,7 @@
 
     <body>
 
-        <img class="cart-icon" src="crocs/logo/cart.png">
+        <img class="cart-icon" src="../style/img/panier.png">
         <div class="cart-ctn"></div>
 
         <div class ="color-picker-ctn">
