--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="pages/style.css">
     <script src="script/script.js"></script>
     <title>Document</title>
 </head>
@@ -18,9 +19,11 @@
             LIVRAISON GRATUITE sur les commandes de plus de 35 €.
         </div>
         <div id="Menu_Crocs">
-            <div id="logo">
-                
-            </div>
+            <a href="/index.html">
+                <div id="logo">
+
+                </div>
+            </a>
             <div id="promo"  class="name">
                 <a href="pages/promo.html">Promo</a>
             </div>
@@ -35,7 +38,7 @@
             </div>
             <div id="like">
             </div>
-            <div id="panier">
+            <div class="cart-icon">
             </div>
 
         </div>
@@ -55,8 +58,29 @@
                 Enfant
             </div>
             <div class="second_titre">
-                Promo
+                <a href="pages/promo.html">Promo</a>
             </div>
+        </div>
+        <div id="deco_petite">
+            <div class="petite_image">
+                <img src="/style/img/img1_deco.webp" alt="" class="petite_image">
+            </div>
+            <div class="petite_image">
+                <img src="/style/img/img2_deco.jpg" alt="" class="petite_image">
+            </div>
+            <div class="petite_image">
+                <img src="/style/img/img3_deco.webp" alt="" class="petite_image">
+            </div>
+            <div class="petite_image">
+                <img src="/style/img/img4_deco.webp" alt="" class="petite_image">
+            </div>
+            <div class="petite_image">
+                <img src="/style/img/img5_deco.webp" alt="" class="petite_image">
+            </div>
+            <div class="petite_image">
+                <img src="/style/img/img6_deco.webp" alt="" >
+            </div>
+
         </div>
     
     </div>
