--- a/index.html
+++ b/index.html
@@ -62,25 +62,34 @@
             </div>
         </div>
         <div id="deco_petite">
-            <div class="petite_image">
+            <div>
                 <img src="/style/img/img1_deco.webp" alt="" class="petite_image">
-            </div>
-            <div class="petite_image">
-                <img src="/style/img/img2_deco.jpg" alt="" class="petite_image">
-            </div>
-            <div class="petite_image">
-                <img src="/style/img/img3_deco.webp" alt="" class="petite_image">
-            </div>
-            <div class="petite_image">
-                <img src="/style/img/img4_deco.webp" alt="" class="petite_image">
-            </div>
-            <div class="petite_image">
-                <img src="/style/img/img5_deco.webp" alt="" class="petite_image">
-            </div>
-            <div class="petite_image">
-                <img src="/style/img/img6_deco.webp" alt="" >
-            </div>
+                <div class="text-box">
 
+                </div>
+            </div>
+            <div>
+                <img src="/style/img/img2_deco.jpg" alt="" class="petite_image">
+
+            </div>
+            <div>
+                <img src="/style/img/img3_deco.webp" alt="" class="petite_image">
+
+            </div>
+            <div>
+                <img src="/style/img/img4_deco.webp" alt="" class="petite_image">
+
+            </div>
+            <div>
+                <img src="/style/img/img5_deco.webp" alt="" class="petite_image">
+       
+            </div>
+            <div>
+                <img src="/style/img/img6_deco.webp" alt="" class="petite_image">
+            </div>
+        </div>
+        <div id="grande_deco">
+            <img src="/style/img/grande_deco.jpg" alt="" id="grande_image">
         </div>
     
     </div>
