--- a/index.html
+++ b/index.html
@@ -89,7 +89,11 @@
             </div>
         </div>
         <div id="grande_deco">
-            <img src="/style/img/grande_deco.jpg" alt="" id="grande_image">
+            <div id="grande_image">
+            </div>
+        </div>
+        <div>
+            
         </div>
     
     </div>
