--- a/pages/promo.html
+++ b/pages/promo.html
@@ -20,23 +20,26 @@
             LIVRAISON GRATUITE sur les commandes de plus de 35 €.
         </div>
             <div id="Menu_Crocs">
-                <a href="/index.html">
+                <a href="../index.html">
                     <div id="logo">
 
                     </div>
                 </a>
                         
-                    <div id="promo"  class="name">
-                        <a href="/pages/promo.html">Promo</a>
-                    </div>
-                    <div class="titre" class="name">
+                <div>
+                    <a href="promo.html" class="titre">Promo</a>
+                </div>
+                    <div class="titre" >
                         Femme
                     </div>
-                    <div class="titre" class="name">
+                    <div class="titre" >
                         Homme
                     </div>
-                    <div class="titre" class="name">
+                    <div class="titre" >
                         Enfant
+                    </div>
+                    <div class="titre">
+                        Spécial
                     </div>
                     <div id="like">
                     </div>
