--- a/pages/details.html
+++ b/pages/details.html
@@ -50,7 +50,7 @@
 
             </div>
 
-            <button class="test" onclick="mabite()">clique sur mabite</button>
+            <button class="test" onclick="test2()">clique sur mabite</button>
 
 </body>
 </html>
