--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </div>
         </div>
         <div id="personne_lis_ça">
-            <div id="exclu">
+            <div class="exclu">
                 <div>
                     <strong>
                         Exclusivités Crocs
@@ -184,6 +184,29 @@
                 <div class="sous_exclu">
                     Soldes et Promos
                 </div>
+            </div>
+            <div class="exclu">
+                <div>
+                    <strong>
+                        Société
+                    </strong>
+                </div>
+                <div class="sous_exclu">
+                    À propos de Crocs
+                </div>
+                <div class="sous_exclu">
+                    Crocs objectif
+                </div>
+                <div class="sous_exclu">
+                    Carrieres
+                </div>
+                <div class="sous_exclu">
+                    Investisseurs
+                </div>
+                <div class="sous_exclu">
+                    Vente en gros
+                </div>
+
             </div>
         </div>
         
