--- a/index.html
+++ b/index.html
@@ -208,6 +208,53 @@
                 </div>
 
             </div>
+            <div class="exclu">
+                <div>
+                    <strong>
+                        Aide
+                    </strong>
+                </div>
+                <div class="sous_exclu">
+                    Statut de la commande
+                </div>
+                <div class="sous_exclu">
+                    Demande de retour
+                </div>
+                <div class="sous_exclu">
+                    Expédition
+                </div>
+                <div class="sous_exclu">
+                    FAQ
+                </div>
+                <div class="sous_exclu">
+                    Guide des tailles
+                </div>
+
+            </div>
+            <div class="exclu">
+                <div>
+                    <strong>
+                        Service Client
+                    </strong>
+                </div>
+                <div class="sous_exclu">
+                    Lun - Ven du lundi au vendredi&nbsp&nbsp&nbsp&nbsp9:00 to 17:00 CET
+                </div>
+                <div class="sous_exclu">
+                    Sam & Dim Du samedi au dimanche&nbsp&nbsp&nbsp
+                    FERMÉ
+                </div>
+                <div class="sous_exclu">
+                    🌌Chat
+                </div>
+                <div class="sous_exclu">
+                    0031&nbsp-&nbsp23&nbsp7411704
+                </div>
+                <div class="sous_exclu">
+                    Autre option de contact
+                </div>
+
+            </div>
         </div>
         
     </div>
