--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="pages/style.css">
+    <link rel="icon" href="./style/img/favicon.ico" type="image/x-icon">
     <script src="script/script.js"></script>
     <title>Document</title>
 </head>
@@ -40,11 +41,6 @@
                 <div class="titre">
                     Spécial
                 </div>
-                <div id="like">
-                </div>
-                <div class="cart-icon">
-                </div>
-
             </div>
         </div>
 
@@ -55,17 +51,17 @@
 
         </div>
         <div id="second_bar">
-            <div class="second_titre">
-                Femme
+            <div>
+                <a href="pages/promo.html" class="second_titre">Femme</a>
             </div>
-            <div class="second_titre">
-                Homme
+            <div>
+                <a href="pages/promo.html" class="second_titre">Homme</a>
             </div>
-            <div class="second_titre">
-                Enfant
+            <div>
+                <a href="pages/promo.html" class="second_titre">Enfant</a>
             </div>
-            <div class="second_titre">
-                Spécial
+            <div>
+                <a href="pages/promo.html" class="second_titre">Special</a>
             </div>
             <div>
                 <a href="pages/promo.html" class="second_titre">Promo</a>
