--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="pages/style.css">
     <link rel="icon" href="./style/img/favicon.ico" type="image/x-icon">
     <script src="script/script.js"></script>
-    <title>Document</title>
+    <title>Accueil</title>
 </head>
 <body>
     <div>
@@ -27,19 +27,19 @@
                     </div>
                 </a>
                 <div>
-                    <a href="pages/promo.html" class="titre">Promo</a>
+                    <a href="pages/promo.html" class="titre_promo">Promo</a>
                 </div>
-                <div class="titre">
-                    Femme
+                <div>
+                    <a href="pages/femme.html" class="titre">Femme</a>
                 </div>
-                <div class="titre">
-                    Homme
+                <div>
+                    <a href="pages/homme.html" class="titre">Homme</a>
                 </div>
-                <div class="titre">
-                    Enfant
+                <div>
+                    <a href="pages/enfant.html" class="titre">Enfant</a>
                 </div>
-                <div class="titre">
-                    Spécial
+                <div>
+                    <a href="pages/special.html" class="titre">Special</a>
                 </div>
             </div>
         </div>
