--- a/pages/homme.html
+++ b/pages/homme.html
@@ -7,7 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="/style/style.css">
-        <title>boutique</title>
+        <link rel="icon" href="../style/img/favicon.ico" type="image/x-icon">
+        <title>Homme</title>
     </head>
 
     <body>
@@ -25,9 +26,8 @@
 
                     </div>
                 </a>
-                        
                 <div>
-                    <a href="promo.html" class="titre">Promo</a>
+                    <a href="promo.html" class="titre_promo">Promo</a>
                 </div>
                 <div>
                     <a href="femme.html" class="titre">Femme</a>
@@ -41,10 +41,10 @@
                 <div>
                     <a href="special.html" class="titre">Special</a>
                 </div>
-                <div id="like">
-                </div>
-                <div class="cart-icon">
-                </div>
+                    <div id="like">
+                    </div>
+                    <div class="cart-icon">
+                    </div>
             </div>
             <div class="cart-ctn"></div>
             <button class="price-btn-asc"> Trier par Prix croissant</button>
