--- a/pages/promo.html
+++ b/pages/promo.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="/style/style.css">
         <link rel="icon" href="../style/img/favicon.ico" type="image/x-icon">
-        <title>boutique</title>
+        <title>Promo</title>
     </head>
 
     <body>
@@ -27,7 +27,7 @@
                     </div>
                 </a>
                 <div>
-                    <a href="promo.html" class="titre">Promo</a>
+                    <a href="promo.html" class="titre_promo">Promo</a>
                 </div>
                 <div>
                     <a href="femme.html" class="titre">Femme</a>
