encore de la déco

--- a/pages/promo.html
+++ b/pages/promo.html
@@ -18,7 +18,17 @@
                 Acheter maintenant. Payer avec  &nbsp <strong> Klarna</strong>. En savoir plus
             </div>
             <div id="bandeau">
-                LIVRAISON GRATUITE sur les commandes de plus de 35 €.
+                <div id="livraison">
+                    LIVRAISON GRATUITE sur les commandes de plus de 35 €.
+                </div>
+                <div id="inscription">
+                    <strong>
+                        Inscrivez-vous au club crocs et <br>profitez de 15% de réduction !
+                    </strong>
+                </div>
+                <div id="compte">
+                    Mon compte
+                </div>
             </div>
             <div id="Menu_Crocs">
                 <a href="../index.html">
