--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="fixed">
             <div id="savoir_plus">
                 
-                Acheter maintenant. Payer avec  &nbsp <strong> Klarna</strong>. En savoir plus
+                Acheter maintenant. Payer avec  &nbsp <strong> Klarna</strong>. <div id="tmp">En savoir plus</div>
             </div>
             <div id="bandeau">
                 <div id="livraison">
@@ -143,17 +143,17 @@
         <div id="bar_contact">
             <div id="profil">
                 <img src="./style/img/profil.png" alt="" id="profil_img">
-                &nbsp&nbspS'identifier
+                S'identifier
             </div>
             <div id="location">
 
                 <img src="./style/img/location.png" alt="" id="location_img">
-                &nbsp&nbspLocaliser les magasins
+                Localiser les magasins
                     
             </div>
             <div id="france">
                 <img src="./style/img/flag.png" alt="" id="france_img">
-                &nbsp&nbspFrance Métropolitaine
+                France Métropolitaine
             </div>
             <div id="logos_reseaux">
                 <div id="insta">
