--- a/pages/promo.html
+++ b/pages/promo.html
@@ -6,59 +6,61 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="/style/style.css">
+        <link rel="stylesheet" href="../style/style.css">
         <link rel="icon" href="../style/img/favicon.ico" type="image/x-icon">
         <title>Promo</title>
     </head>
 
     <body>
         <div>
-            <div id="savoir_plus">
-                
-                Acheter maintenant. Payer avec  &nbsp <strong> Klarna</strong>. <div id="tmp">En savoir plus</div>
-            </div>
-            <div id="bandeau">
-                <div id="livraison">
-                    LIVRAISON GRATUITE sur les commandes de plus de 35 €.
+            <div id="fixed">
+                <div id="savoir_plus">
+                    
+                    Acheter maintenant. Payer avec  &nbsp <strong> Klarna</strong>. <div id="tmp">En savoir plus</div>
                 </div>
-                <div id="inscription">
-                    <strong>
-                        Inscrivez-vous au club crocs et <br>profitez de 15% de réduction !
-                    </strong>
+                <div id="bandeau">
+                    <div id="livraison">
+                        LIVRAISON GRATUITE sur les commandes de plus de 35 €.
+                    </div>
+                    <div id="inscription">
+                        <strong>
+                            Inscrivez-vous au club crocs et <br>profitez de 15% de réduction !
+                        </strong>
+                    </div>
+                    <div id="compte">
+                        Mon compte
+                    </div>
                 </div>
-                <div id="compte">
-                    Mon compte
-                </div>
-            </div>
-            <div id="Menu_Crocs">
-                <div id="menu">
-                    <img src="../style/img/hamburger.png" alt="" id="menu_img">
-                </div>
-                <a href="../index.html">
-                    <div id="logo">
+                <div id="Menu_Crocs">
+                    <div id="menu">
+                        <img src="../style/img/hamburger.png" alt="" id="menu_img">
+                    </div>
+                    <a href="../index.html">
+                        <div id="logo">
 
+                        </div>
+                    </a>
+                    <div>
+                        <a href="promo.html" class="titre_promo">Promo</a>
                     </div>
-                </a>
-                <div>
-                    <a href="promo.html" class="titre_promo">Promo</a>
-                </div>
-                <div>
-                    <a href="femme.html" class="titre">Femme</a>
-                </div>
-                <div>
-                    <a href="homme.html" class="titre">Homme</a>
-                </div>
-                <div>
-                    <a href="enfant.html" class="titre">Enfant</a>
-                </div>
-                <div>
-                    <a href="special.html" class="titre">Special</a>
-                </div>
-                    <div id="like">
+                    <div>
+                        <a href="femme.html" class="titre">Femme</a>
                     </div>
-                    <div class="cart-icon">
+                    <div>
+                        <a href="homme.html" class="titre">Homme</a>
                     </div>
-            </div>
+                    <div>
+                        <a href="enfant.html" class="titre">Enfant</a>
+                    </div>
+                    <div>
+                        <a href="special.html" class="titre">Special</a>
+                    </div>
+                        <div id="like">
+                        </div>
+                        <div class="cart-icon">
+                        </div>
+                </div>
+                </div>
             <div class="cart-ctn"></div>
             <button class="price-btn-asc"> Trier par Prix croissant</button>
             <div class="ctn-crocs"></div>
