--- a/pages/enfant.html
+++ b/pages/enfant.html
@@ -13,6 +13,7 @@
 
     <body>
         <div>
+            <div id="fixed">
             <div id="savoir_plus">
                 
                 Acheter maintenant. Payer avec  &nbsp <strong> Klarna</strong>. <div id="tmp">En savoir plus</div>
@@ -58,6 +59,7 @@
                     </div>
                     <div class="cart-icon">
                     </div>
+            </div>
             </div>
             <div class="cart-ctn"></div>
             <button class="price-btn-asc"> Trier par Prix croissant</button>
