--- a/pages/promo.html
+++ b/pages/promo.html
@@ -61,7 +61,9 @@
                         </div>
                 </div>
                 </div>
-            <div class="cart-ctn"></div>
+            <div class="cart-ctn">
+                
+            </div>
             <button class="price-btn-asc"> Trier par Prix croissant</button>
             <div class="ctn-crocs"></div>
             <script src="../script/script.js"></script>
