--- a/pages/details.html
+++ b/pages/details.html
@@ -66,22 +66,22 @@
             <div id="global">
                 <div class="detailsCaroussel">
                     <div class="caroussel">
-                        <div class="leftArrow"></div>
-                        <div class="carousselImg"></div>
-                        <div class="rightArrow"></div>
+                        <div class="Arrow" onclick="moveElem(-1)">&larr;</div>
+                        <img class="carousselImg">
+                        <div class="Arrow" onclick="moveElem(1)">&rarr;</div>
                     </div>
                     <div class="carousselImgMini">
-                        <img class="carousselImg1">
-                        <img class="carousselImg2">
-                        <img class="carousselImg3">
+                        <img class="MiniCarousselImg" onclick="swapElem(0)">
+                        <img class="MiniCarousselImg" onclick="swapElem(1)">
+                        <img class="MiniCarousselImg" onclick="swapElem(2)">
                     </div>
                 </div>
                 <div class="detailsInfo">
-                    <div class="detailsTitle">test</div>
-                    <div class="detailsPrice">test2</div>
-                    <div class="detailsColorName">test3</div>
-                    <div class="detailsColors">test4</div>
-                    <div class="detailsDesc">test5</div>
+                    <div class="detailsTitle"></div>
+                    <div class="detailsPrice"></div>
+                    <div class="detailsColorName"></div>
+                    <div class="detailsColors"></div>
+                    <div class="detailsDesc"></div>
                 </div>
             </div>
 
