--- a/pages/details.html
+++ b/pages/details.html
@@ -59,7 +59,6 @@
         </div>
     </div>
 
-            <button class="test" onclick="test2()">clique sur mabite</button>
 
 
 
@@ -75,15 +74,57 @@
                         <img class="MiniCarousselImg" onclick="swapElem(1)">
                         <img class="MiniCarousselImg" onclick="swapElem(2)">
                     </div>
+                    <div id="outer">
+                        <strong>Fais-en une affaire personnelle</strong>
+                        <div id="affaires">
+                            <div class="affaires_box">
+                                <img src="../style/img/affaire1.avif" alt="" class="affaires_img">
+                                <strong>4€99</strong>
+                            </div>
+                            <div class="affaires_box">
+                                <img src="../style/img/affaire2.avif" alt="" class="affaires_img">
+                                <strong>3€99</strong>
+                            </div>
+                            <div class="affaires_box">
+                                <img src="../style/img/affaire3.avif" alt="" class="affaires_img">
+                                <strong>2€99</strong>
+                            </div>
+                            <div class="affaires_box">
+                                <img src="../style/img/affaire4.avif" alt="" class="affaires_img">
+                                <strong>5€99</strong>
+                            </div>
+                            <div class="affaires_box">
+                                <img src="../style/img/affaire5.avif" alt="" class="affaires_img">
+                                <strong>3€99</strong>
+                            </div>
+                            <div class="affaires_box">
+                                <img src="../style/img/affaire6.avif" alt="" class="affaires_img">
+                                <strong>4€99</strong>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="detailsInfo">
                     <div class="detailsTitle"></div>
                     <div class="detailsPrice"></div>
+                    <div id="plus">
+                        <div id="rose">
+                            <strong>Klarna.</strong>
+                        </div>
+                        <div>
+                            Payer en 3 versements de 23,32 €. 
+                            <div id="tmp">
+                                En savoir plus
+                            </div>
+                        </div>
+                    </div>
                     <div class="detailsColorName"></div>
                     <div class="detailsColors"></div>
+                    <div class="detailsSize"></div>
                     <div class="detailsDesc"></div>
                 </div>
             </div>
+            
 
             <div id="haut_footer">
                 Rejoignez le Crocs Club et profitez de 15 % de réduction sur votre prochain achat !&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
