all size + effet

--- a/pages/details.html
+++ b/pages/details.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="../style/img/favicon.ico" type="image/x-icon">
 
 </head>
-<body>
+<body id="body">
     <div>
         <div id="fixed">
             <div id="savoir_plus">
@@ -121,7 +121,9 @@
                     <div class="detailsColorName"></div>
                     <div class="detailsColors"></div>
                     <div class="detailsSize"></div>
-                    <div class="detailsDesc"></div>
+                    <div id="descAdjust">
+                        <div class="detailsDesc"></div>
+                    </div>
                 </div>
             </div>
             
