on avais oublier les sorts :c

--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
                     </div>
                 </a>
                 <div>
-                    <a href="pages/promo.html" class="titre_promo">Promo</a>
+                    <a href="pages/crocs.html" class="titre_promo">Promo</a>
                 </div>
                 <div>
-                    <a href="pages/femme.html" class="titre">Femme</a>
+                    <a href="pages/crocs.html" class="titre">Femme</a>
                 </div>
                 <div>
-                    <a href="pages/homme.html" class="titre">Homme</a>
+                    <a href="pages/crocs.html" class="titre">Homme</a>
                 </div>
                 <div>
-                    <a href="pages/enfant.html" class="titre">Enfant</a>
+                    <a href="pages/crocs.html" class="titre">Enfant</a>
                 </div>
                 <div>
-                    <a href="pages/special.html" class="titre">Special</a>
+                    <a href="pages/crocs.html" class="titre">Special</a>
                 </div>
             </div>
         </div>
