--- a/pages/crocs.html
+++ b/pages/crocs.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="../style/style.css">
         <link rel="icon" href="../style/img/favicon.ico" type="image/x-icon">
-        <title>Homme</title>
+        <title>Crocs</title>
     </head>
 
     <body>
@@ -41,19 +41,19 @@
                     </div>
                 </a>
                 <div>
-                    <a href="promo.html" class="titre_promo">Promo</a>
+                    <div class="titre_promo" onclick="catFilter(0)">Promo</div>
                 </div>
                 <div>
-                    <a href="femme.html" class="titre">Femme</a>
+                    <div class="titre" onclick="catFilter(1)">Femme</div>
                 </div>
                 <div>
-                    <a href="homme.html" class="titre">Homme</a>
+                    <div class="titre" onclick="catFilter(2)">Homme</div>
                 </div>
                 <div>
-                    <a href="enfant.html" class="titre">Enfant</a>
+                    <div class="titre" onclick="catFilter(3)">Enfant</div>
                 </div>
                 <div>
-                    <a href="special.html" class="titre">Special</a>
+                    <div class="titre" onclick="catFilter(4)">Special</div>
                 </div>
                     <div id="like">
                     </div>
@@ -75,17 +75,17 @@
             </div>
             <div id="bar_contact">
                 <div id="profil">
-                    <img src="../style/img/profil.png" alt="" id="profil_img">
+                    <img src="./style/img/profil.png" alt="" id="profil_img">
                     S'identifier
                 </div>
                 <div id="location">
     
-                    <img src="../style/img/location.png" alt="" id="location_img">
+                    <img src="./style/img/location.png" alt="" id="location_img">
                     Localiser les magasins
                         
                 </div>
                 <div id="france">
-                    <img src="../style/img/flag.png" alt="" id="france_img">
+                    <img src="./style/img/flag.png" alt="" id="france_img">
                     France Métropolitaine
                 </div>
                 <div id="logos_reseaux">
