--- a/pages/crocs.html
+++ b/pages/crocs.html
@@ -41,19 +41,19 @@
                     </div>
                 </a>
                 <div>
-                    <div class="titre_promo" onclick="catFilter(0)">Promo</div>
+                    <div class="titre_promo" onclick="catFilter(0), SwapCategory(this)">Promo</div>
                 </div>
                 <div>
-                    <div class="titre" onclick="catFilter(1)">Femme</div>
+                    <div class="titre" onclick="catFilter(1), SwapCategory(this)">Femme</div>
                 </div>
                 <div>
-                    <div class="titre" onclick="catFilter(2)">Homme</div>
+                    <div class="titre" onclick="catFilter(2), SwapCategory(this)">Homme</div>
                 </div>
                 <div>
-                    <div class="titre" onclick="catFilter(3)">Enfant</div>
+                    <div class="titre" onclick="catFilter(3), SwapCategory(this)">Enfant</div>
                 </div>
                 <div>
-                    <div class="titre" onclick="catFilter(4)">Special</div>
+                    <div class="titre" onclick="catFilter(4), SwapCategory(this)">Special</div>
                 </div>
                     <div id="like">
                     </div>
@@ -75,17 +75,17 @@
             </div>
             <div id="bar_contact">
                 <div id="profil">
-                    <img src="./style/img/profil.png" alt="" id="profil_img">
+                    <img src="../style/img/profil.png" alt="" id="profil_img">
                     S'identifier
                 </div>
                 <div id="location">
     
-                    <img src="./style/img/location.png" alt="" id="location_img">
+                    <img src="../style/img/location.png" alt="" id="location_img">
                     Localiser les magasins
                         
                 </div>
                 <div id="france">
-                    <img src="./style/img/flag.png" alt="" id="france_img">
+                    <img src="../style/img/flag.png" alt="" id="france_img">
                     France Métropolitaine
                 </div>
                 <div id="logos_reseaux">
