--- a/index.html
+++ b/index.html
@@ -40,19 +40,7 @@
                     </div>
                 </a>
                 <div>
-                    <a href="pages/crocs.html" class="titre_promo">Promo</a>
-                </div>
-                <div>
-                    <a href="pages/crocs.html" class="titre">Femme</a>
-                </div>
-                <div>
-                    <a href="pages/crocs.html" class="titre">Homme</a>
-                </div>
-                <div>
-                    <a href="pages/crocs.html" class="titre">Enfant</a>
-                </div>
-                <div>
-                    <a href="pages/crocs.html" class="titre">Special</a>
+                    <a href="pages/crocs.html" class="titre_promo">Voir Tout</a>
                 </div>
             </div>
         </div>
