--- a/pages/details.html
+++ b/pages/details.html
@@ -41,19 +41,7 @@
                     </div>
                 </a>
                 <div>
-                    <a href="promo.html" class="titre_promo">Promo</a>
-                </div>
-                <div>
-                    <a href="femme.html" class="titre">Femme</a>
-                </div>
-                <div>
-                    <a href="homme.html" class="titre">Homme</a>
-                </div>
-                <div>
-                    <a href="enfant.html" class="titre">Enfant</a>
-                </div>
-                <div>
-                    <a href="special.html" class="titre">Special</a>
+                    <a href="pages/crocs.html" class="titre_promo">Retourner aux Crocs</a>
                 </div>
             </div>
             </div>
