--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
         </div>
         <div id="second_bar">
             <div>
-                <a href="pages/promo.html" class="second_titre">Femme</a>
+                <a  class="second_titre">Femme</a>
             </div>
             <div>
-                <a href="pages/promo.html" class="second_titre">Homme</a>
+                <a href="#" class="second_titre">Homme</a>
             </div>
             <div>
-                <a href="pages/promo.html" class="second_titre">Enfant</a>
+                <a href="#" class="second_titre">Enfant</a>
             </div>
             <div>
-                <a href="pages/promo.html" class="second_titre">Special</a>
+                <a href="#" class="second_titre">Special</a>
             </div>
             <div>
-                <a href="pages/promo.html" class="second_titre">Promo</a>
+                <a href="#" class="second_titre">Promo</a>
             </div>
         </div>
         <div class="deco_petite">
