--- a/pages/crocs.html
+++ b/pages/crocs.html
@@ -34,7 +34,7 @@
             </div>
             <div class="cart-ctn"></div>
             <div class="globalCroc">
-                <div class="allSort" onclick="showSortList()">trier <span id="arrow">&#8680;</span></div>
+                <strong><div class="allSort" onclick="showSortList()">trier <span id="arrow">&#8680;</span></div></strong>
                 <div id="sortList" class="invisSortList sortList">
                     <button class="price-btn-asc"> Trier par Prix croissant</button>
                     <button class="price-btn-des"> Trier par Prix decroissant</button>
