--- a/pages/details.html
+++ b/pages/details.html
@@ -41,7 +41,7 @@
                     </div>
                 </a>
                 <div>
-                    <a href="pages/crocs.html" class="titre_promo">Retourner aux Crocs</a>
+                    <a href="./crocs.html" class="titre_promo">Retourner aux Crocs</a>
                 </div>
             </div>
             </div>
