--- a/pages/crocs.html
+++ b/pages/crocs.html
@@ -38,6 +38,14 @@
                 <div id="sortList" class="invisSortList sortList">
                     <button class="price-btn-asc"> Trier par Prix croissant</button>
                     <button class="price-btn-des"> Trier par Prix decroissant</button>
+                    <div class ="color-picker-ctn">
+                        <div class=" picker round all selected"> All </div>
+                        <div class=" picker round white"></div>
+                        <div class=" picker round grey"></div>
+                        <div class=" picker round red"></div>
+                        <div class=" picker round blue"></div>
+                        <div class=" picker round black"></div>
+                    </div>
                 </div>
                 <div class="ctn-crocs"></div>
             </div>
