color sort finished

--- a/pages/crocs.html
+++ b/pages/crocs.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style/style2.css">
         <link rel="stylesheet" href="../style/style.css">
         <link rel="icon" href="../style/img/favicon.ico" type="image/x-icon">
         <title>Crocs</title>
@@ -45,7 +45,10 @@
                         <div class=" picker round red"></div>
                         <div class=" picker round blue"></div>
                         <div class=" picker round black"></div>
+                        <div class=" picker round pink"></div>
+                        <div class=" picker round green"></div>
                     </div>
+                    <div class="detailsSize"></div>
                 </div>
                 <div class="ctn-crocs"></div>
             </div>
