--- a/pages/details.html
+++ b/pages/details.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Details</title>
     <link rel="stylesheet" href="../style/style.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style/style2.css">
     <script src="../script/detailsScript.js"></script>
     <link rel="icon" href="../style/img/favicon.ico" type="image/x-icon">
 
