--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="pages/style.css">
-    <link rel="icon" href="./style/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style/style2.css">
+    <link rel="icon" href="style/img/favicon.ico" type="image/x-icon">
     <script src="script/script.js"></script>
     <title>Accueil</title>
 </head>
