prob final push

--- a/pages/crocs.html
+++ b/pages/crocs.html
@@ -36,19 +36,23 @@
             <div class="globalCroc">
                 <strong><div class="allSort" onclick="showSortList()">trier <span id="arrow">&#8680;</span></div></strong>
                 <div id="sortList" class="invisSortList sortList">
-                    <button class="price-btn-asc"> Trier par Prix croissant</button>
-                    <button class="price-btn-des"> Trier par Prix decroissant</button>
-                    <div class ="color-picker-ctn">
-                        <div class=" picker round all selected"> All </div>
-                        <div class=" picker round white"></div>
-                        <div class=" picker round grey"></div>
-                        <div class=" picker round red"></div>
-                        <div class=" picker round blue"></div>
-                        <div class=" picker round black"></div>
-                        <div class=" picker round pink"></div>
-                        <div class=" picker round green"></div>
+                    <div class="filtersdiv">
+                        <div class="filterSort">
+                            <button class="price-btn-asc"> Trier par Prix croissant</button>
+                            <button class="price-btn-des"> Trier par Prix decroissant</button>
+                        </div>
+                        <div class ="color-picker-ctn">
+                            <div class=" picker round all selected"> All </div>
+                            <div class=" picker round white"></div>
+                            <div class=" picker round grey"></div>
+                            <div class=" picker round red"></div>
+                            <div class=" picker round blue"></div>
+                            <div class=" picker round black"></div>
+                            <div class=" picker round pink"></div>
+                            <div class=" picker round green"></div>
+                        </div>
+                        <div class="detailsSize"></div>
                     </div>
-                    <div class="detailsSize"></div>
                 </div>
                 <div class="ctn-crocs"></div>
             </div>
